<resources>
    <string name="app_name">ChessGPT</string>
    <string name="instruction_text">Default Instruction Text</string>
    <string name="end_game">End Game</string>
    <string name="start_game">Start Game</string>
    <string name="starting_game">Starting a new game!</string>
    <string name="get_moves">Get Possible Moves</string>
    <string name="first_move_text">Make Your First Move!</string>
    <string name="hi">hi</string>
    <string name="tab_1_text">Tab 1 Text</string>
    <string name="tab_2_text">Tab 2 Text</string>
    <string name="chess_board_description">Chess Board</string>
    <string name="king_white_description">White King</string>
    <string name="grid_cell">Grid Cell</string>
    <string name="black_move_button_text">Make Black Move</string>
    <string name="black_move_text_field_hint">Pawn e7 -> e5</string>
    <string name="post_move_text">The AI is making its move…</string>
    <string name="post_ai_move_text">Your move!</string>
    <string name="initial_instruction_text">Press \'Start Game\' to begin!</string>
    <string name="pre_first_move_text">Make your first move!</string>
    <string name="stats_placeholder">Stats: %1$d</string>
    <string name="wins_placeholder">Wins: %1$d</string>
    <string name="losses_placeholder">Losses: %1$d</string>
    <string name="api_key">Your OpenAI API key</string>
    <string name="settings_api_key_label">Your OpenAI API Key:</string>
    <string name="edit_button_text">Edit</string>
    <string name="save_button_text">Save</string>
    <string name="settings_button_text">Settings</string>
    <string name="back_button_text">Back</string>
    <string name="api_key_alert_text">%1$s</string>
    <string name="tokens_left">Tokens Left: %1$d</string>
    <string name="refresh_button_text">Refresh</string>
    <string name="move_label_text">Your moves: \nChat\'s moves:</string>
</resources>